# icfpc2020

./: .dockerignore  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile.base  Makefile  README.md  build.sh  cloudbuild.yaml  cloudbuild_interpreter.yaml  cloudbuild_simulator.yaml  run.sh  submit_test.sh  test_app.sh
.cargo/: config
.github/workflows/: auto-approve.yml  repo-sync.yml  rust.yml
app/: Cargo.toml  README.md  ai.rs  attacker.rs  cympfh.rs  dual_attack.rs  floating_ai.rs  full_moon.rs  garasubo.rs  main.rs  min_mutlti_ai.rs  moon.rs  new_moon.rs  new_unagi.rs  nop_ai.rs  protocol.rs  sexpr2binary.rs  tailed.rs  true_moon.rs  unagi_clone.rs  utility.rs
glyph/: app.txt  lpar.txt  rpar.txt  sep.txt
images/: run_this.sh
interpreter/: .gitignore  Dockerfile  LICENSE  README.md  all-hies  example.json  galaxy.txt  interpreter.cabal  json_to_ppm.rb  memo.txt  vis.rb
interpreter/app/: Main.hs
interpreter/app/compiler/: Main.hs
interpreter/app/interpreter/: Main.hs
interpreter/app/interpreter-api/: Main.hs
interpreter/data/: galaxy.txt
interpreter/src/: MyLib.hs  Negainoido.hs
interpreter/src/Negainoido/: Compile.hs  Eval.hs  Parser.hs  Syntax.hs
interpreter/test/: MyLibSpec.hs  NegainoidoSpec.hs
interpreter/test/Negainoido/: CompileSpec.hs  EvalSpec.hs  (+1 more)
simulator/: Dockerfile  Pipfile  cloudbuild.yaml  main.py  run-docker.sh
simulator/contents/: index.html
simulator/inputs/: input.txt
simulator/solutions/: solution.txt
slack/: Cargo.toml
slack_tool/: Cargo.toml
solver/: Cargo.toml
solver/src/: ai.rs  api_client.rs  decode.rs  encode.rs  eval.rs  expr.rs  lib.rs  modulate.rs  opt.rs  symbol.rs  task.rs  typing.rs
solver/tests/: test.rs
solver/tests/resources/: galaxy.txt  statelessdraw.txt  test.ans  test.txt  test2.ans  test2.txt  test3.ans  test3.txt
src/: lib.rs  main.rs  opt.rs
tests/: test.rs
tools/: Cargo.toml  demodulate.rb
tools/src/: main.rs  slack.rs
visualizer/: image.rb  visualizer.rb
visualizer-js/: package.json  tsconfig.json  visualizer.html  visualizer.js  visualizer.js.map  visualizer.ts
