[package]
name = "icfpc2020"
version = "0.1.0"
authors = ["tikuta <tikuta@linux>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
rand = "0.7.3"
env_logger = "0.7.1"
log = "0.4.8"
assert_cmd = "1.0.1"
tempfile = "3.1.0"
proconio = "0.4.1"

[[bin]]
name = "solver1"

[[bin]]
name = "cympfh"
