[package]
name = "icfpc2020"
version = "0.1.0"
authors = ["tikuta <tikuta@linux>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
rand = "0.7.3"
env_logger = "0.7.1"
log = "0.4.8"
assert_cmd = "1.0.1"
tempfile = "3.1.0"
proconio = "0.4.1"
ureq = "1.3.0"
url = "2.1"
lazy_static = "1.4"
failure = "0.1"
[dev-dependencies]
glob = "0.3"
regex = "1.3"

[[bin]]
name = "solver1"

[[bin]]
name = "cympfh"

# [[bin]]
# name = "wav2png"

# [[bin]]
# name = "png2txt"

[[bin]]
name = "submission"


[[bin]]
name = "solver"