[package]
name = "tools"
version = "0.1.0"
authors = ["garasubo <garasubo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
confy = "0.4.0"
serde_json = "1.0.55"
rpassword = "4.0.5"
keyring = "0.9.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
